<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/padding_gral"
            android:paddingHorizontal="@dimen/padding_gral"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:gravity="center_horizontal"/>

            <DatePicker
                android:id="@+id/dpCalendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/marginT_Date"
                android:background="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:gravity="center_horizontal"
                android:layout_marginVertical="@dimen/marginVerET"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:gravity="center_horizontal"
                android:layout_marginVertical="@dimen/marginVerET"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descripcion"
                android:gravity="center_horizontal"
                android:layout_marginVertical="@dimen/marginVerET"/>

            <Button
                android:id="@+id/btnBoton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>